# rustman

./: Cargo.toml  README.md  build.rs
artifacts/: maze.txt
linux/libwebp-0.4.1/lib/: libwebp.la  libwebp.lai
linux/zstd_v1.4.4/: info.txt
linux/zstd_v1.4.4/lib/: libzstd.so.1
src/: main.rs  rustman.rs
src/rustman/: ghost_maker.rs  maze_maker.rs  player_maker.rs  sound.rs
